2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b216

	* Add: Random Block - added and updated to use our save serialization
	  functions

	* Change: album->canReadRecurse() - change "global $albumDB" to a new
	  albumDB, since not all callers have established an albumDB.

2004-06-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b215

	* Change: Suppress non-essential ini_set() error message, if server disallows
	  ini_set()

	* Change: Only execute start_session() if we're not embedded.
	  When embedded, this throws an "already started" error message with devMode on.

2004-06-24 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b214

	* Fix: Bug #978297; User-Language was not saved for selfregisterd users.

2004-06-23 Chris Kelly <ckdake@users.sf.net>  1.4.4-cvs-b213

        * Fix: quoted attribute for better HTML compliance

2004-06-23 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b212

	* Fix: Added missing ereg Paramater introduced in b210

2004-06-22  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b211

	* Fixed typo in upload (and slideshow) applets for Geeklog.

2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b210

	* Change: config wiz - try and find a closer match to the requested
	  language for locale aliases.  If we don't find a really close match,
	  fall back to a semi-close one.  (Check for "en_US" before falling back to
	  "en", etc.)

2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b209

	* Bug 977777: If newName and oldName are the same, just close the
	  dialog

2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b208

	* Change: view_album - unset $myAlbum if item isn't an album so that
	  we don't carry it over to the next item

	* Change: un-revert printChildren opt, it was correct

2004-06-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b207

	* Change: Revert printChildren opt .. might be causing an issue

2004-06-22 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b206
