@@ -31,7 +31,7 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = '1.4.4-cvs-b216';
+$gallery->version = '1.4.4-cvs-b217';
 $gallery->config_version = 82;
 $gallery->album_version = 30;
 $gallery->user_version = 5;
