@@ -22,6 +22,7 @@
 ?>
 <?php
 
+
 require(dirname(__FILE__) . '/init.php');
 
 $gallery->session->offlineAlbums["albums.php"]=true;
