@@ -1,3 +1,7 @@
+2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b217
+
+	* Fix: Gallery didnt recognized a log out from GeekLog
+
 2004-06-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b216
 
 	* Add: Random Block - added and updated to use our save serialization
@@ -107,8 +111,6 @@
 2004-06-17 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b197
 
 	* Fix: Readded isSupportedCharset, because its used for unhtmlentities
-
-	Todo: fix alttext.
 
 2004-06-17 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b196
 
